--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-s3.adoc
@@ -296,7 +296,7 @@ endif::add-copy-button-to-env-var[]
 |
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus-s3-devservices-container-properties-container-properties]]`link:#quarkus-amazon-s3_quarkus-s3-devservices-container-properties-container-properties[quarkus.s3.devservices.container-properties]`
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus-s3-devservices-container-properties-container-properties]]`link:#quarkus-amazon-s3_quarkus-s3-devservices-container-properties-container-properties[quarkus.s3.devservices.container-properties."container-properties"]`
 
 
 [.description]
@@ -304,12 +304,13 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-s3_quarkus-s3-devservice
 Generic properties that are pass for additional container configuration.
 
 ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_S3_DEVSERVICES_CONTAINER_PROPERTIES+++[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_S3_DEVSERVICES_CONTAINER_PROPERTIES__CONTAINER_PROPERTIES_+++[]
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_S3_DEVSERVICES_CONTAINER_PROPERTIES+++`
+Environment variable: `+++QUARKUS_S3_DEVSERVICES_CONTAINER_PROPERTIES__CONTAINER_PROPERTIES_+++`
 endif::add-copy-button-to-env-var[]
---|`Map<String,String>` 
+--|link:https://docs.oracle.com/javase/8/docs/api/java/lang/String.html[String]
+ 
 |
 
 
