--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-ses.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-ses.adoc
@@ -156,7 +156,7 @@ endif::add-copy-button-to-env-var[]
 |`localstack`
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon-ses_quarkus-ses-devservices-container-properties-container-properties]]`link:#quarkus-amazon-ses_quarkus-ses-devservices-container-properties-container-properties[quarkus.ses.devservices.container-properties]`
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-ses_quarkus-ses-devservices-container-properties-container-properties]]`link:#quarkus-amazon-ses_quarkus-ses-devservices-container-properties-container-properties[quarkus.ses.devservices.container-properties."container-properties"]`
 
 
 [.description]
@@ -164,12 +164,13 @@ a|icon:lock[title=Fixed at build time] [[quarkus-amazon-ses_quarkus-ses-devservi
 Generic properties that are pass for additional container configuration.
 
 ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_SES_DEVSERVICES_CONTAINER_PROPERTIES+++[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_SES_DEVSERVICES_CONTAINER_PROPERTIES__CONTAINER_PROPERTIES_+++[]
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_SES_DEVSERVICES_CONTAINER_PROPERTIES+++`
+Environment variable: `+++QUARKUS_SES_DEVSERVICES_CONTAINER_PROPERTIES__CONTAINER_PROPERTIES_+++`
 endif::add-copy-button-to-env-var[]
---|`Map<String,String>` 
+--|link:https://docs.oracle.com/javase/8/docs/api/java/lang/String.html[String]
+ 
 |
 
 
