--- a/docs/modules/ROOT/pages/includes/quarkus-aws-devservices-moto-moto-dev-services-build-time-config.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-aws-devservices-moto-moto-dev-services-build-time-config.adoc
@@ -27,7 +27,7 @@ endif::add-copy-button-to-env-var[]
 |`motoserver/moto`
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-aws-devservices-moto-moto-dev-services-build-time-config_quarkus-aws-devservices-moto-container-properties-container-properties]]`link:#quarkus-aws-devservices-moto-moto-dev-services-build-time-config_quarkus-aws-devservices-moto-container-properties-container-properties[quarkus.aws.devservices.moto.container-properties]`
+a|icon:lock[title=Fixed at build time] [[quarkus-aws-devservices-moto-moto-dev-services-build-time-config_quarkus-aws-devservices-moto-container-properties-container-properties]]`link:#quarkus-aws-devservices-moto-moto-dev-services-build-time-config_quarkus-aws-devservices-moto-container-properties-container-properties[quarkus.aws.devservices.moto.container-properties."container-properties"]`
 
 
 [.description]
@@ -35,12 +35,13 @@ a|icon:lock[title=Fixed at build time] [[quarkus-aws-devservices-moto-moto-dev-s
 Generic properties that are pass for additional container configuration.
 
 ifdef::add-copy-button-to-env-var[]
-Environment variable: env_var_with_copy_button:+++QUARKUS_AWS_DEVSERVICES_MOTO_CONTAINER_PROPERTIES+++[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_AWS_DEVSERVICES_MOTO_CONTAINER_PROPERTIES__CONTAINER_PROPERTIES_+++[]
 endif::add-copy-button-to-env-var[]
 ifndef::add-copy-button-to-env-var[]
-Environment variable: `+++QUARKUS_AWS_DEVSERVICES_MOTO_CONTAINER_PROPERTIES+++`
+Environment variable: `+++QUARKUS_AWS_DEVSERVICES_MOTO_CONTAINER_PROPERTIES__CONTAINER_PROPERTIES_+++`
 endif::add-copy-button-to-env-var[]
---|`Map<String,String>` 
+--|link:https://docs.oracle.com/javase/8/docs/api/java/lang/String.html[String]
+ 
 |
 
 |===
