--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-kms.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-kms.adoc
@@ -542,7 +542,7 @@ a| [[quarkus-amazon-kms_quarkus-kms-aws-credentials-process-provider-command]] [
 
 [.description]
 --
-The command that should be executed to retrieve credentials.
+The command that should be executed to retrieve credentials. Command and parameters are seperated list entries.
 
 
 ifdef::add-copy-button-to-env-var[]
@@ -552,7 +552,7 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_KMS_AWS_CREDENTIALS_PROCESS_PROVIDER_COMMAND+++`
 endif::add-copy-button-to-env-var[]
 --
-|string
+|list of string
 |
 
 
