--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-kinesis.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-kinesis.adoc
@@ -542,7 +542,7 @@ a| [[quarkus-amazon-kinesis_quarkus-kinesis-aws-credentials-process-provider-com
 
 [.description]
 --
-The command that should be executed to retrieve credentials.
+The command that should be executed to retrieve credentials. Command and parameters are seperated list entries.
 
 
 ifdef::add-copy-button-to-env-var[]
@@ -552,7 +552,7 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_KINESIS_AWS_CREDENTIALS_PROCESS_PROVIDER_COMMAND+++`
 endif::add-copy-button-to-env-var[]
 --
-|string
+|list of string
 |
 
 
