--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-s3_quarkus.s3.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-s3_quarkus.s3.adoc
@@ -682,7 +682,7 @@ a| [[quarkus-amazon-s3_quarkus-s3-aws-credentials-process-provider-command]] [.p
 
 [.description]
 --
-The command that should be executed to retrieve credentials.
+The command that should be executed to retrieve credentials. Command and parameters are seperated list entries.
 
 
 ifdef::add-copy-button-to-env-var[]
@@ -692,7 +692,7 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_S3_AWS_CREDENTIALS_PROCESS_PROVIDER_COMMAND+++`
 endif::add-copy-button-to-env-var[]
 --
-|string
+|list of string
 |
 
 
