--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -10,6 +10,8 @@
 * xref:amazon-kinesis.adoc[Kinesis]
 * xref:amazon-kms.adoc[KMS]
 * xref:amazon-lambda.adoc[Lambda]
+* xref:amazon-paymentcryptography.adoc[Payment Cryptography]
+* xref:amazon-paymentcryptographydata.adoc[Payment Cryptography Data]
 * xref:amazon-s3.adoc[S3]
 * xref:amazon-secretsmanager.adoc[Secret Manager]
 * xref:amazon-ses.adoc[SES]
