docs: update generated doc

--- a/docs/modules/ROOT/pages/includes/quarkus-amazon_quarkus.aws.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon_quarkus.aws.adoc
@@ -8,7 +8,7 @@ h|[.header-title]##Configuration property##
 h|Type
 h|Default
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-moto-image-name]] [.property-path]##`quarkus.aws.devservices.moto.image-name`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-moto-image-name]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-moto-image-name[`quarkus.aws.devservices.moto.image-name`]##
 
 [.description]
 --
@@ -25,7 +25,7 @@ endif::add-copy-button-to-env-var[]
 |string
 |`motoserver/moto`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-moto-container-properties-container-properties]] [.property-path]##`quarkus.aws.devservices.moto.container-properties."container-properties"`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-moto-container-properties-container-properties]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-moto-container-properties-container-properties[`quarkus.aws.devservices.moto.container-properties."container-properties"`]##
 
 [.description]
 --
@@ -42,7 +42,7 @@ endif::add-copy-button-to-env-var[]
 |Map<String,String>
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-image-name]] [.property-path]##`quarkus.aws.devservices.localstack.image-name`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-image-name]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-image-name[`quarkus.aws.devservices.localstack.image-name`]##
 
 [.description]
 --
@@ -59,7 +59,7 @@ endif::add-copy-button-to-env-var[]
 |string
 |`localstack/localstack:3.7.2`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-container-properties-container-properties]] [.property-path]##`quarkus.aws.devservices.localstack.container-properties."container-properties"`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-container-properties-container-properties]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-container-properties-container-properties[`quarkus.aws.devservices.localstack.container-properties."container-properties"`]##
 
 [.description]
 --
@@ -76,7 +76,7 @@ endif::add-copy-button-to-env-var[]
 |Map<String,String>
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-init-scripts-folder]] [.property-path]##`quarkus.aws.devservices.localstack.init-scripts-folder`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-init-scripts-folder]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-init-scripts-folder[`quarkus.aws.devservices.localstack.init-scripts-folder`]##
 
 [.description]
 --
@@ -93,7 +93,7 @@ endif::add-copy-button-to-env-var[]
 |string
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-init-scripts-classpath]] [.property-path]##`quarkus.aws.devservices.localstack.init-scripts-classpath`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-init-scripts-classpath]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-init-scripts-classpath[`quarkus.aws.devservices.localstack.init-scripts-classpath`]##
 
 [.description]
 --
@@ -110,7 +110,7 @@ endif::add-copy-button-to-env-var[]
 |string
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-init-completion-msg]] [.property-path]##`quarkus.aws.devservices.localstack.init-completion-msg`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-init-completion-msg]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-init-completion-msg[`quarkus.aws.devservices.localstack.init-completion-msg`]##
 
 [.description]
 --
@@ -127,7 +127,7 @@ endif::add-copy-button-to-env-var[]
 |string
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-port]] [.property-path]##`quarkus.aws.devservices.localstack.port`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-port]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-port[`quarkus.aws.devservices.localstack.port`]##
 
 [.description]
 --
@@ -144,7 +144,7 @@ endif::add-copy-button-to-env-var[]
 |int
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-enabled]] [.property-path]##`quarkus.aws.devservices.localstack.additional-services."additional-services".enabled`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-enabled]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-enabled[`quarkus.aws.devservices.localstack.additional-services."additional-services".enabled`]##
 
 [.description]
 --
@@ -161,7 +161,7 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-shared]] [.property-path]##`quarkus.aws.devservices.localstack.additional-services."additional-services".shared`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-shared]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-shared[`quarkus.aws.devservices.localstack.additional-services."additional-services".shared`]##
 
 [.description]
 --
@@ -182,7 +182,7 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |`false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-isolated]] [.property-path]##`quarkus.aws.devservices.localstack.additional-services."additional-services".isolated`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-isolated]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-isolated[`quarkus.aws.devservices.localstack.additional-services."additional-services".isolated`]##
 
 [.description]
 --
@@ -199,7 +199,7 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |`true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-service-name]] [.property-path]##`quarkus.aws.devservices.localstack.additional-services."additional-services".service-name`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-service-name]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-service-name[`quarkus.aws.devservices.localstack.additional-services."additional-services".service-name`]##
 
 [.description]
 --
@@ -218,7 +218,7 @@ endif::add-copy-button-to-env-var[]
 |string
 |`localstack`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-container-properties-container-properties]] [.property-path]##`quarkus.aws.devservices.localstack.additional-services."additional-services".container-properties."container-properties"`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-container-properties-container-properties]] [.property-path]##link:#quarkus-amazon_quarkus-aws-devservices-localstack-additional-services-additional-services-container-properties-container-properties[`quarkus.aws.devservices.localstack.additional-services."additional-services".container-properties."container-properties"`]##
 
 [.description]
 --
