--- a/docs/modules/ROOT/pages/includes/quarkus-amazon_quarkus.otel.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon_quarkus.otel.adoc
@@ -8,7 +8,7 @@ h|[.header-title]##Configuration property##
 h|Type
 h|Default
 
-a| [[quarkus-amazon_quarkus-otel-instrumentation-messaging-experimental-capture-headers]] [.property-path]##`quarkus.otel.instrumentation.messaging.experimental.capture-headers`##
+a| [[quarkus-amazon_quarkus-otel-instrumentation-messaging-experimental-capture-headers]] [.property-path]##link:#quarkus-amazon_quarkus-otel-instrumentation-messaging-experimental-capture-headers[`quarkus.otel.instrumentation.messaging.experimental.capture-headers`]##
 
 [.description]
 --
@@ -25,7 +25,7 @@ endif::add-copy-button-to-env-var[]
 |list of string
 |
 
-a| [[quarkus-amazon_quarkus-otel-instrumentation-messaging-experimental-receive-telemetry-enabled]] [.property-path]##`quarkus.otel.instrumentation.messaging.experimental.receive-telemetry.enabled`##
+a| [[quarkus-amazon_quarkus-otel-instrumentation-messaging-experimental-receive-telemetry-enabled]] [.property-path]##link:#quarkus-amazon_quarkus-otel-instrumentation-messaging-experimental-receive-telemetry-enabled[`quarkus.otel.instrumentation.messaging.experimental.receive-telemetry.enabled`]##
 
 [.description]
 --
@@ -42,7 +42,7 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |`false`
 
-a| [[quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-span-attributes]] [.property-path]##`quarkus.otel.instrumentation.aws-sdk.experimental-span-attributes`##
+a| [[quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-span-attributes]] [.property-path]##link:#quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-span-attributes[`quarkus.otel.instrumentation.aws-sdk.experimental-span-attributes`]##
 
 [.description]
 --
@@ -59,7 +59,7 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |`false`
 
-a| [[quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-use-propagator-for-messaging]] [.property-path]##`quarkus.otel.instrumentation.aws-sdk.experimental-use-propagator-for-messaging`##
+a| [[quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-use-propagator-for-messaging]] [.property-path]##link:#quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-use-propagator-for-messaging[`quarkus.otel.instrumentation.aws-sdk.experimental-use-propagator-for-messaging`]##
 
 [.description]
 --
@@ -76,7 +76,7 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |`false`
 
-a| [[quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-record-individual-http-error]] [.property-path]##`quarkus.otel.instrumentation.aws-sdk.experimental-record-individual-http-error`##
+a| [[quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-record-individual-http-error]] [.property-path]##link:#quarkus-amazon_quarkus-otel-instrumentation-aws-sdk-experimental-record-individual-http-error[`quarkus.otel.instrumentation.aws-sdk.experimental-record-individual-http-error`]##
 
 [.description]
 --
