--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-dynamodb-enhanced_quarkus.dynamodbenhanced.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-dynamodb-enhanced_quarkus.dynamodbenhanced.adoc
@@ -8,7 +8,7 @@ h|[.header-title]##Configuration property##
 h|Type
 h|Default
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon-dynamodb-enhanced_quarkus-dynamodbenhanced-client-extensions]] [.property-path]##`quarkus.dynamodbenhanced.client-extensions`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-dynamodb-enhanced_quarkus-dynamodbenhanced-client-extensions]] [.property-path]##link:#quarkus-amazon-dynamodb-enhanced_quarkus-dynamodbenhanced-client-extensions[`quarkus.dynamodbenhanced.client-extensions`]##
 
 [.description]
 --
@@ -25,7 +25,7 @@ endif::add-copy-button-to-env-var[]
 |list of string
 |
 
-a|icon:lock[title=Fixed at build time] [[quarkus-amazon-dynamodb-enhanced_quarkus-dynamodbenhanced-create-table-schemas]] [.property-path]##`quarkus.dynamodbenhanced.create-table-schemas`##
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-dynamodb-enhanced_quarkus-dynamodbenhanced-create-table-schemas]] [.property-path]##link:#quarkus-amazon-dynamodb-enhanced_quarkus-dynamodbenhanced-create-table-schemas[`quarkus.dynamodbenhanced.create-table-schemas`]##
 
 [.description]
 --
