--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,4 @@
+* xref:amazon-apigatewaymanagementapi [Api Gateway Management Api]
 * xref:amazon-cloudwatch.adoc[CloudWatch]
 * xref:amazon-cloudwatchlogs.adoc[CloudWatch Logs]
 * xref:amazon-cognitouserpools.adoc[Cognito User Pools]
